--- a/css/styles.css
+++ b/css/styles.css
@@ -1133,7 +1133,7 @@ body.fullPage-portfolio {
 /* Intro                                                                         */
 /*********************************************************************************/
 
-  #intro {
+  #section0 {
     background: url('http://arburako.github.io/inst-ca0315/img/overlay.png'), url('http://arburako.github.io/inst-ca0315/img/intro.jpg');
     background-size: 256px 256px, cover;
     background-attachment: fixed, fixed;
@@ -1190,6 +1190,19 @@ body.fullPage-portfolio {
 
   #thankyou {
     background: url('../img/overlay.png'), url('../img/thankyou.jpg');
+    background-size: 256px 256px, cover;
+    background-attachment: fixed, fixed;
+    background-position: top left, bottom center;
+    background-repeat: repeat, no-repeat;
+  }
+
+
+  /*********************************************************************************/
+/* confirmed                                                                        */
+/*********************************************************************************/
+
+  #confirmed {
+    background: url('../img/overlay.png'), url('../img/confirmed.jpg');
     background-size: 256px 256px, cover;
     background-attachment: fixed, fixed;
     background-position: top left, bottom center;
