--- a/css/styles.css
+++ b/css/styles.css
@@ -842,6 +842,62 @@ body.fullPage-portfolio {
   opacity: .3;
 }
 
+/************************************/
+/* =SPACERS  */
+/************************************/
+
+  .top-minus-10{margin-top:-10px}
+  .top-minus-20{margin-top:-20px}
+  .top-minus-30{margin-top:-30px}
+  .top-minus-40{margin-top:-40px}
+  .top-minus-45{margin-top:-45px}
+  .top-minus-60{margin-top:-60px}
+  .top-0{margin-top:0}
+  .top-5{margin-top:5px}
+  .top-10{margin-top:10px}
+  .top-15{margin-top:15px}
+  .top-20{margin-top:20px}
+  .top-22{margin-top:22px}
+  .top-25{margin-top:25px}
+  .top-30{margin-top:30px}
+  .top-35{margin-top:35px}
+  .top-40{margin-top:40px}
+  .top-45{margin-top:45px}
+  .top-50{margin-top:50px}
+  .top-55{margin-top:55px}
+  .top-60{margin-top:60px}
+  .top-65{margin-top:65px}
+  .top-70{margin-top:60px}
+  .top-80{margin-top:80px}
+  .top-85{margin-top:85px}
+  .top-90{margin-top:90px}
+  .top-95{margin-top:95px}
+  .top-100{margin-top:100px}
+  .top-110{margin-top:110px}
+  .top-120{margin-top:120px}
+  .top-140{margin-top:140px}
+  .top-150{margin-top:150px}
+  .top-160{margin-top:160px}
+  .top-180{margin-top:180px}
+  .top-200{margin-top:200px}
+  .top-250{margin-top:250px}
+
+  @media(max-width:768px){
+    .top-200{margin-top:100px}
+    .top-180{margin-top:90px}
+    .top-160{margin-top:80px}
+    .top-140{margin-top:70px}
+    .top-120{margin-top:60px}
+    .top-100{margin-top:50px}
+    .top-80{margin-top:40px}
+    .top-60{margin-top:30px}
+    .top-65{margin-top:32px}
+    .top-40{margin-top:20px}
+    .top-30{margin-top:15px}
+    .top-25{margin-top:12px}
+    .top-20{margin-top:10px}
+  }
+
 
 /*----------------------------------------------------------------------------------- */
 /*  Big Picture */
@@ -1013,6 +1069,10 @@ body.fullPage-portfolio {
       .box.style2 {
         padding: 3.5em 2.5em 3.5em 2.5em;
         text-align: left;
+      }
+      .box.style3 {
+        padding: 0;
+        text-align: center;
       }
 
   /* Main */
@@ -1220,7 +1280,17 @@ body.fullPage-portfolio {
     background-position: top left, bottom center;
     background-repeat: repeat, no-repeat;
   }
+  .subscribe {
+  background: #23292F;
+  opacity: .8;
+  padding-top: 96px;
+  padding-bottom: 66px;
+  overflow: hidden;
+  text-align: center;
+  max-width: 70%;
+  margin: auto 15%;
 
+}
 #mc_embed_signup {
    -webkit-background-clip: border-box;
   -webkit-background-origin: padding-box;
@@ -1265,7 +1335,7 @@ body.fullPage-portfolio {
   padding: 0;
   text-align: center;
   vertical-align: baseline;
-  width: 100%;
+  min-width: 100%;
 }
 #mce-EMAIL{
   -webkit-animation-duration: 1s;
@@ -1325,10 +1395,6 @@ body.fullPage-portfolio {
   outline-color: rgb(100, 115, 115);
   outline-style: none;
   outline-width: 0px;
-  padding-bottom: 18px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 18px;
   text-align: center;
   text-indent: 0px;
   text-shadow: none;
@@ -1398,10 +1464,6 @@ body.fullPage-portfolio {
   line-height: 60px;
   margin: 0;
   opacity: 0.999999940395355;
-  padding-bottom: 0px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 0px;
   text-align: center;
   text-decoration: none;
   text-indent: 0px;
@@ -1416,7 +1478,79 @@ body.fullPage-portfolio {
   writing-mode: lr-tb;
 }
 
-
+#mc-embedded-thankyou {
+  -webkit-animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  -webkit-animation-name: fadeInRightBig;
+  -webkit-appearance: none;
+  -webkit-background-clip: border-box;
+  -webkit-background-origin: padding-box;
+  -webkit-background-size: auto;
+  -webkit-font-smoothing: antialiased;
+  -webkit-rtl-ordering: logical;
+  -webkit-transition-delay: 0s;
+  -webkit-transition-duration: 0.2s;
+  -webkit-transition-property: all;
+  -webkit-transition-timing-function: ease-in-out;
+  -webkit-user-select: none;
+  -webkit-writing-mode: horizontal-tb;
+  background-attachment: scroll;
+  background-clip: border-box;
+  background-color: rgb(17, 171, 176);
+  background-image: none;
+  background-origin: padding-box;
+  background-size: auto;
+  border-bottom-color: rgb(255, 255, 255);
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  border-bottom-style: none;
+  border-bottom-width: 0px;
+  border-image-outset: 0px;
+  border-image-repeat: stretch;
+  border-image-slice: 100%;
+  border-image-source: none;
+  border-image-width: 1;
+  border-left-color: rgb(255, 255, 255);
+  border-left-style: none;
+  border-left-width: 0px;
+  border-right-color: rgb(255, 255, 255);
+  border-right-style: none;
+  border-right-width: 0px;
+  border-top-color: rgb(255, 255, 255);
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border-top-style: none;
+  border-top-width: 0px;
+  box-sizing: border-box;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  display: block;
+  float: right;
+  font-family: montserrat-bold, sans-serif;
+  font-size: 16px;
+  font-stretch: normal;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  height: 60px;
+  letter-spacing: 2px;
+  line-height: 60px;
+  margin: 0;
+  opacity: 0.999999940395355;
+  text-align: center;
+  text-decoration: none;
+  text-indent: 0px;
+  text-shadow: none;
+  text-transform: uppercase;
+  transition-delay: 0s;
+  transition-duration: 0.2s;
+  transition-property: all;
+  transition-timing-function: ease-in-out;
+  width: 50%;
+  margin: auto 25%;
+  word-spacing: 0px;
+  writing-mode: lr-tb;
+}
 
 .container-fluid {
   padding: 0;
@@ -1429,3 +1563,5 @@ body.fullPage-portfolio {
   .overlay ul li {
     min-height: 34px; } 
   }
+
+
